--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/microservices": "^10.4.3",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
     "git": "^0.1.5",
     "mongoose": "^8.6.1",
     "reflect-metadata": "^0.2.0",
